--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1374,14 +1374,14 @@ a {
 .cid-uQARWEkZrr .mbr-text,
 .cid-uQARWEkZrr .mbr-section-btn {
   text-align: center;
-  color: #ffffff;
+  color: #000000;
 }
 .cid-uQARWEkZrr .mbr-section-title {
-  color: #ffffff;
+  color: #000000;
   text-align: center;
 }
 .cid-uQARWEkZrr .mbr-section-subtitle {
-  color: #ffffff;
+  color: #000000;
   text-align: center;
 }
 .cid-uQARWEkTtw {
