--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1424,7 +1424,7 @@ a {
 }
 .cid-uQARWEkTtw .card-title,
 .cid-uQARWEkTtw .card-box {
-  text-align: left;
+  text-align: center;
   color: #000000;
 }
 .cid-uQBp9lwSjn {
